# simulrepile

./: .gitignore  AGENTS.md  AUDIT_FINDINGS.csv  AUDIT_FINDINGS.json  AUDIT_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  GAPS.md  GUIDE_INSTALLATION_FIRMWARE.md  MIGRATION.md  PLAN.md  README.md  README_SD_SPI.md  agents.md  idf_component.yml  project_include.cmake  sdkconfig  sdkconfig.defaults
.github/workflows/: ci.yml
assets/: README.md  generate_assets.sh  species_profiles.json
assets/tools/: png_to_raw565.py
components/assets/: CMakeLists.txt  assets.c  assets.h
components/can/: can.c  can.h
components/ch422g/: CMakeLists.txt  Kconfig  ch422g.c
components/ch422g/include/: ch422g.h
components/cjson/: CMakeLists.txt
components/config/: game_mode.c  game_mode.h
components/env_control/: env_control.c  env_control.h
components/game/: CMakeLists.txt  economy.c  economy.h  environment.c  environment.h  game.c  game.h  room.c  room.h
components/game/render3d/: render3d.cpp  render3d.h
components/game/reptiles/: reptiles.c  reptiles.h  reptiles.json
components/game/terrarium/: terrarium.c  terrarium.h
components/game/terrarium_ui/: ui.c  ui.h
components/gpio/: CMakeLists.txt  gpio.c  gpio.h  gpio_real.c  gpio_sim.c
components/gui_paint/: gui_bmp.c
components/i2c/: Kconfig  i2c.c  i2c.h
components/image/: currency_card.c  image.c  image.h  reptile_boire.c  reptile_chauffer.c  reptile_happy.c  reptile_idle.c  reptile_manger.c  reptile_sad.c  terrarium_alert.c  terrarium_assets.c  terrarium_ok.c
components/input_gestures/: CMakeLists.txt
components/io_extension/: io_extension.c
components/logging/: CMakeLists.txt  logging.c  logging.h  logging_real.c
components/lovyangfx_patch/: CMakeLists.txt
components/lvgl_port/: CMakeLists.txt  lvgl_port.c  lvgl_port.cpp  lvgl_port.h
components/real_mode/: CMakeLists.txt  README.md  actuators.c  actuators.h  dashboard.c  dashboard.h  logging.c  logging.h  real_mode.c  real_mode.h  sensors.c  sensors.h
components/real_terrarium/: CMakeLists.txt  real_terrarium.c  real_terrarium.h
components/regulations/: CMakeLists.txt  regulations.c  regulations.h
components/reptile_logic/: CMakeLists.txt  reptile_logic.c  reptile_logic.h
components/rgb_lcd_port/: CMakeLists.txt  rgb_lcd_port.c
components/schedule/: CMakeLists.txt  schedule.c  schedule.h
components/sd/: CMakeLists.txt  Kconfig  sd.c  sd.h  sd_spi.c
components/sd/include/: sd.h
components/sensors/: CMakeLists.txt  sensors.c  sensors.h  sensors_real.c  sensors_sim.c
components/sim_api/: sim_api.h
components/species_db/: CMakeLists.txt  species_catalogue.csv  species_catalogue.json  species_db.c  species_db.h
components/storage/: CMakeLists.txt  Kconfig  logs.c  logs.h  sd_spi.c  storage.c  storage.h
components/storage/include/: sd.h
components/terrarium_manager/: CMakeLists.txt  terrarium_manager.c  terrarium_manager.h
components/touch/: CMakeLists.txt  gt911.c
components/touch_gt911/: CMakeLists.txt  input_gestures.c  input_gestures.h  touch_gt911.c  touch_gt911.h
components/ui_fonts/: CMakeLists.txt  ui_font_montserrat_16_fr.c  ui_font_montserrat_20_fr.c  ui_font_montserrat_24_fr.c
components/waveshare_io/: CMakeLists.txt  waveshare_io.c
components/waveshare_io/include/: waveshare_io.h
core_firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
core_firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main.h  idf_component.yml
core_firmware/main/link/: core_host_link.c  core_host_link.h
core_firmware/main/state/: core_state_manager.c  core_state_manager.h
docs/: BRINGUP_SD.md  README_SD_SPI.md  cahier_des_charges.md  conception_systeme.md  reglementation.md
docs/troubleshooting/: ch422g.md
firmware/: AGENTS.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/components/compression_if/: CMakeLists.txt  compression_if_stub.c
firmware/data/i18n/: de.json  en.json  (+2 more)
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main.h  idf_component.yml  virtual_sensors.c  virtual_sensors.h
firmware/main/assets/: asset_cache.c  asset_cache.h  asset_manager.c  asset_manager.h
firmware/main/bsp/: exio.c  exio.h  pins_lcd.h  pins_rev_a.h  pins_rev_b.h  pins_sd.h  pins_touch.h  pins_usb.h  waveshare_7b.c  waveshare_7b.h  waveshare_7b_lgfx.cpp  waveshare_7b_lgfx.h
firmware/main/compression/: compression_if.h  compression_stub.c
firmware/main/docs/: doc_reader.c  doc_reader.h
firmware/main/i18n/: i18n.c  i18n.h  i18n_manager.c  i18n_manager.h
firmware/main/include/: app_config.h
firmware/main/link/: core_link.c  core_link.h  core_link_protocol.h
firmware/main/logging/: log_manager.c  log_manager.h
firmware/main/persist/: save_manager.c  save_manager.h  save_service.c  save_service.h  schema_version.c  schema_version.h
firmware/main/sim/: models.c  models.h  presets.c  presets.h  sim_engine.c  sim_engine.h  sim_models.h  sim_presets.c  sim_presets.h
firmware/main/tts/: tts_stub.c  tts_stub.h
firmware/main/ui/: ui_about.c  ui_about.h  ui_dashboard.c  ui_dashboard.h  ui_docs.c  ui_docs.h  ui_root.c  ui_root.h  ui_settings.c  ui_settings.h  ui_slots.c  ui_slots.h  ui_theme.c  ui_theme.h
firmware/main/update/: update_manager.c  update_manager.h
firmware/main/updates/: updates_manager.c  updates_manager.h
firmware/tests/: CMakeLists.txt  test_compression.c  test_crc.c  test_persistence.c  test_sim.c
main/: CMakeLists.txt  Kconfig.projbuild  compliance.c  compliance.h  idf_component.yml  lvgl_compat.c  lvgl_compat.h  main.c  regulation.c  regulation.h  reptile_game.c  reptile_game.h  reptile_real.c  settings.c  settings.h  sleep.h  ui_theme.c  ui_theme.h
patches/: 01-sd-init.patch  02-ui-sd-sim.patch  03-docs.patch  04-ci.patch
tests/: acceptance_sd.py  sim_reptile.c  test_can_read.c  test_sd_sim.py  validate_real_logs.py
tests/include/: esp_err.h  esp_log.h  i2c.h  io_extension.h  sd.h
tools/: ui_theme_designer.lua
tools/esp_idf_compat/: gpio_hal_compat.h
tools/i2c_scanner/: CMakeLists.txt  README.md  sdkconfig.defaults
(+25 files in other folders)
