idf_component_register(
    SRCS
        "app_main.c"
        "bsp/waveshare_7b.c"
        "bsp/waveshare_7b_lgfx.cpp"
        "bsp/exio.c"
        "assets/asset_cache.c"
        "docs/doc_reader.c"
        "i18n/i18n_manager.c"
        "persist/save_manager.c"
        "persist/save_service.c"
        "updates/updates_manager.c"
        "sim/models.c"
        "sim/presets.c"
        "sim/sim_engine.c"
        "link/core_link.c"
        "ui/ui_root.c"
        "ui/ui_dashboard.c"
        "ui/ui_slots.c"
        "ui/ui_docs.c"
        "ui/ui_settings.c"
        "ui/ui_about.c"
        "ui/ui_theme.c"
        "tts/tts_stub.c"
    INCLUDE_DIRS
        "."
        "bsp"
        "assets"
        "docs"
        "i18n"
        "persist"
        "tts"
        "updates"
        "sim"
        "ui"
        "link"
        "../common/include"
    REQUIRES
        driver
        esp_lcd
        cJSON
        fatfs
        nvs_flash
        esp_timer
        esp_psram
        esp_lvgl_port
        lvgl__lvgl
        lvgl_port
        compression_if
)

# Add Unity tests placeholder component if needed later.
